fix(main): remove extra padding in container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,12 @@
 // $my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent);
 // @include angular-material-theme($my-app-theme);
 
-html, body { height: 100%; 
-background-color: rgb(1,1,1);}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    background-color: rgb(1, 1, 1);
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
